@@ -1,5 +1,9 @@
 2016-09-05  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	* src/smooth/ftgrays.c (gray_move_to, gray_start_cell): Revert.
+
+2016-09-05  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	[smooth] Improve contour start.
 
 	* src/smooth/ftgrays.c (gray_move_to): Call `gray_set_cell' directly
